--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Döküman</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/reset.css" />
+    <link rel="stylesheet" href="style/index.css" />
+    <title>John Doe - Ana Sayfa</title>
+  </head>
+  <body>
+    <header>
+      <div>
+        <img src="https://img.logoipsum.com/286.svg" alt="" />
+      </div>
+      <nav>
+        <a href="#">Ana Sayfa</a>
+        <a href="#">Hakkımda</a>
+        <a href="#">Projelerim</a>
+        <a href="#">İletişim</a>
+      </nav>
+    </header>
+    <section id="slider">
+      <div>
+        <img src="https://picsum.photos/1600/900" alt="" />
+      </div>
+      <div>
+        <span></span>
+        <a href="#">Projelerim</a>
+      </div>
+    </section>
+    <section id="projects">
+      <div>
+        <a href="#">
+          <div>
+            <img src="https://picsum.photos/1000/1000" alt="" />
+          </div>
+          <span>Başlık</span>
+        </a>
+      </div>
+    </section>
+    <footer>
+      <div>
+        <a href="#">İletişim</a>
+      </div>
+    </footer>
+  </body>
 </html>
