--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <header>
-      <div>
-        <img src="https://img.logoipsum.com/286.svg" alt="" />
+      <div id="logo">
+        <a href="/"><img src="https://img.logoipsum.com/286.svg" alt="" /></a>
       </div>
       <nav>
-        <a href="#">Ana Sayfa</a>
-        <a href="#">Hakkımda</a>
-        <a href="#">Projelerim</a>
-        <a href="#">İletişim</a>
+        <a href="/">Ana Sayfa</a>
+        <a href="about.html">Hakkımda</a>
+        <a href="projects.html">Projelerim</a>
+        <a href="contact.html">İletişim</a>
       </nav>
     </header>
     <section id="slider">
@@ -25,7 +25,7 @@
       </div>
       <div>
         <span></span>
-        <a href="#">Projelerim</a>
+        <a href="projects.html">Projelerim</a>
       </div>
     </section>
     <section id="projects">
@@ -40,7 +40,7 @@
     </section>
     <footer>
       <div>
-        <a href="#">İletişim</a>
+        <a href="contact.html">İletişim</a>
       </div>
     </footer>
   </body>
