--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <a href="contact.html">İletişim</a>
       </nav>
     </header>
-    <section id="slider">
-      <div>
-        <img src="https://picsum.photos/1600/900" alt="" />
-      </div>
-      <div>
-        <span></span>
-        <a href="projects.html">Projelerim</a>
+    <section id="sliders">
+      <div class="slider">
+        <img class="slider-image" src="https://picsum.photos/1600/900" alt="" />
+        <div class="slider-items">
+          <span class="slider-title">John Doe</span>
+          <a class="slider-button" href="projects.html">Projelerim</a>
+        </div>
       </div>
     </section>
     <section id="projects">
