projects created & slider fix

--- a/index.html
+++ b/index.html
@@ -19,25 +19,45 @@
         <a href="contact.html">İletişim</a>
       </nav>
     </header>
-    <section id="sliders">
-      <div class="slider">
-        <img class="slider-image" src="https://picsum.photos/1600/900" alt="" />
-        <div class="slider-items">
+    <div class="container">
+      <section id="sliders">
+        <div class="slider-items" style="background-image: url(https://picsum.photos/1600/900)">
           <span class="slider-title">John Doe</span>
           <a class="slider-button" href="projects.html">Projelerim</a>
         </div>
-      </div>
-    </section>
-    <section id="projects">
-      <div>
-        <a href="#">
-          <div>
-            <img src="https://picsum.photos/1000/1000" alt="" />
-          </div>
-          <span>Başlık</span>
-        </a>
-      </div>
-    </section>
+      </section>
+      <section id="projects">
+        <div class="projects-row">
+          <a class="project" href="#">
+            <img class="project-image" src="https://picsum.photos/1000/1000" alt="" />
+            <span class="project-title">Lorem Ipsum</span>
+          </a>
+          <a class="project" href="#">
+            <img class="project-image" src="https://picsum.photos/1000/1000" alt="" />
+            <span class="project-title">Lorem Ipsum</span>
+          </a>
+          <a class="project" href="#">
+            <img class="project-image" src="https://picsum.photos/1000/1000" alt="" />
+            <span class="project-title">Lorem Ipsum</span>
+          </a>
+        </div>
+        <div class="projects-row">
+          <a class="project" href="#">
+            <img class="project-image" src="https://picsum.photos/1000/1000" alt="" />
+            <span class="project-title">Lorem Ipsum</span>
+          </a>
+          <a class="project" href="#">
+            <img class="project-image" src="https://picsum.photos/1000/1000" alt="" />
+            <span class="project-title">Lorem Ipsum</span>
+          </a>
+          <a class="project" href="#">
+            <img class="project-image" src="https://picsum.photos/1000/1000" alt="" />
+            <span class="project-title">Lorem Ipsum</span>
+          </a>
+        </div>
+      </section>
+    </div>
+
     <footer>
       <div>
         <a href="contact.html">İletişim</a>
