--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/reset.css" />
     <link rel="stylesheet" href="style/index.css" />
-    <title>John Doe - Ana Sayfa</title>
+    <title>John Doe | Ana Sayfa</title>
   </head>
   <body>
     <header>
@@ -13,17 +13,18 @@
         <a href="/"><img src="https://img.logoipsum.com/286.svg" alt="" /></a>
       </div>
       <nav>
-        <a href="/">Ana Sayfa</a>
-        <a href="about.html">Hakkımda</a>
-        <a href="projects.html">Projelerim</a>
-        <a href="contact.html">İletişim</a>
+        <a class="btn" href="/">Ana Sayfa</a>
+        <a class="btn" href="about.html">Hakkımda</a>
+        <a class="btn" href="projects.html">Projelerim</a>
+        <a class="btn" href="contact.html">İletişim</a>
       </nav>
     </header>
     <div class="container">
       <section id="sliders">
-        <div class="slider-items" style="background-image: url(https://picsum.photos/1600/900)">
+        <img class="slider-image" src="https://picsum.photos/1600/900" alt="" />
+        <div class="slider-items">
           <span class="slider-title">John Doe</span>
-          <a class="slider-button" href="projects.html">Projelerim</a>
+          <a class="slider-button btn-lg" href="projects.html">Projelerim</a>
         </div>
       </section>
       <section id="projects">
@@ -57,11 +58,14 @@
         </div>
       </section>
     </div>
-
     <footer>
-      <div>
-        <a href="contact.html">İletişim</a>
+      <a id="footer-contact" class="btn-lg" href="contact.html">İletişim</a>
+      <div id="social">
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-linkedin"></a>
       </div>
     </footer>
   </body>
+  <script src="https://use.fontawesome.com/7a6db1a7e9.js"></script>
 </html>
