--- a/index.html
+++ b/index.html
@@ -30,29 +30,29 @@
       <section id="projects">
         <div class="projects-row">
           <a class="project" href="#">
-            <img class="project-image" src="https://picsum.photos/1000/1000" alt="" />
+            <img class="project-image" src="https://fastly.picsum.photos/id/322/1000/1000.jpg?hmac=FX-s6LlQI9gQdrg76y9GCJI42_kS31kN9Twt-EQSCN4" alt="" />
             <span class="project-title">Lorem Ipsum</span>
           </a>
           <a class="project" href="#">
-            <img class="project-image" src="https://picsum.photos/1000/1000" alt="" />
+            <img class="project-image" src="https://fastly.picsum.photos/id/772/1000/1000.jpg?hmac=wQbth5z0SKyc6qoD58HH0vFgsOY45EEQEB4SEbpDCcI" alt="" />
             <span class="project-title">Lorem Ipsum</span>
           </a>
           <a class="project" href="#">
-            <img class="project-image" src="https://picsum.photos/1000/1000" alt="" />
+            <img class="project-image" src="https://fastly.picsum.photos/id/373/1000/1000.jpg?hmac=yUoI3-crdozcFkJfQU9SCIDah4tBktQboY9zbMqgw24" alt="" />
             <span class="project-title">Lorem Ipsum</span>
           </a>
         </div>
         <div class="projects-row">
           <a class="project" href="#">
-            <img class="project-image" src="https://picsum.photos/1000/1000" alt="" />
+            <img class="project-image" src="https://fastly.picsum.photos/id/66/1000/1000.jpg?hmac=t8MOyg5poz18pk5cCHdg-FDPJvpgaEv1DlHVdEYz-zo" alt="" />
             <span class="project-title">Lorem Ipsum</span>
           </a>
           <a class="project" href="#">
-            <img class="project-image" src="https://picsum.photos/1000/1000" alt="" />
+            <img class="project-image" src="https://fastly.picsum.photos/id/520/1000/1000.jpg?hmac=QWtBzjt4bU0glaJ0DySxjldWy8quFHghwnCKJ_1b-GM" alt="" />
             <span class="project-title">Lorem Ipsum</span>
           </a>
           <a class="project" href="#">
-            <img class="project-image" src="https://picsum.photos/1000/1000" alt="" />
+            <img class="project-image" src="https://fastly.picsum.photos/id/1042/1000/1000.jpg?hmac=YGYeWpJ_WIILTMJlHcbnKvd9xKzm4s8G9vsvnF2PXLc" alt="" />
             <span class="project-title">Lorem Ipsum</span>
           </a>
         </div>
